<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="@dimen/mainLayoutW"
            android:layout_height="@dimen/mainLayoutH"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/h4"
                android:layout_marginLeft="@dimen/h2"
                android:text="@string/search"
                android:textSize="@dimen/h2"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/h2"
                android:text="@string/genres"
                android:textSize="@dimen/h3"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layoutw2"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/genreHeight"
                    android:layout_height="@dimen/imagewh"
                    android:layout_marginRight="@dimen/h2"
                    android:backgroundTint="@color/red1"
                    app:cardCornerRadius="@dimen/h4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/h4"
                        android:text="@string/rap" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/genreHeight"
                    android:layout_height="@dimen/imagewh"
                    android:backgroundTint="@color/red2"
                    app:cardCornerRadius="@dimen/h4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/h4"
                        android:text="@string/metal" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/layoutw2"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/genreHeight"
                    android:layout_height="@dimen/imagewh"
                    android:layout_marginRight="@dimen/h2"
                    android:backgroundTint="@color/blue1"
                    app:cardCornerRadius="@dimen/h4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/h4"
                        android:text="@string/trap" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="@dimen/genreHeight"
                    android:layout_height="@dimen/imagewh"
                    android:backgroundTint="@color/blue2"
                    app:cardCornerRadius="@dimen/h4">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/h4"
                        android:text="@string/randb" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>